dev/tests/cases/neg/41_task_container.tv
df main() -> void {
    set bad: list<task<str>> = list_new();
    echo!(len(bad));
}
